--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,19 @@ body {
     height: 100vh;
     
 }
+.sidebar {
+    background: #262626;
+    width: 200px;
+    padding: 20px;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
+}
+
+.user-icon {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-bottom: 10px;
+}
 
 nav {
     background: #262626;
