--- a/styles.css
+++ b/styles.css
@@ -10,21 +10,34 @@ body {
     justify-content: space-between;
     height: 100vh;
     
-}
-.sidebar {
-    display: inline;
-    background: #262626;
-    width: 200px;
-    padding: 20px;
-    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
+}.user-info {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
 }
 
 .user-icon {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    margin-bottom: 10px;
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
 }
+
+.user-details {
+    text-align: left;
+}
+
+.user-details h2 {
+    font-size: 18px;
+    margin: 0;
+    color: #ffd700;
+}
+
+.user-details p {
+    font-size: 14px;
+    margin: 2px 0;
+    color: #e0e0e0;
+}
+
 
 nav {
     background: #262626;
